Bug 187733 - Cannot turn off sidebar after Infrared filter usage?
Summary: Cannot turn off sidebar after Infrared filter usage?
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Showfoto-Usability (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-20 20:13 UTC by Joe Biden
Modified: 2022-02-05 05:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joe Biden 2009-03-20 20:13:56 UTC
Version:           0.10.0 (using 4.2.1 (KDE 4.2.1), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.29-rc8

To reproduce:
Make sure sidebar tab is minimized (Geolocator, exif data, whatever)
Load picture
Go to Infrared filter (which has it's own huge usability issues)
Make changes to images and hit "Ok".
Sidebar (always on geolocator) is now on and jutting into window.
Comment 1 Joe Biden 2009-03-20 20:17:36 UTC
I think that this sidebar setting might be shared between the filter and the editor, which is counter-intuitive, because in the filter, you absolutely need the sidebar to set settings, etc. but in the editor proper, you don't want the geolocator on most images just being there. This should probably be per-filter, or even one setting for filters (Don't see how you can use them without a sidebar, since that seems to be how they are built now) and for the editor, which is usable without a sidebar.

I have a video showcasing all the problems with this flow and how it needs to change with regard to display and usability bugs. Let me know who would like the link to the video, since it has some images I wouldn't like public.
Comment 2 caulier.gilles 2009-04-17 09:57:16 UTC
MArcel,

I confirm this problem with 0.11 implementation. Why sidebar is re-opened after to use editor tool like Infrared ? I remember that you have fixed something like that before 0.10 final release, or i'm wrong ?

Gilles
Comment 3 Andi Clemens 2009-04-17 10:07:27 UTC
But this behavior is true for every filter, not infrared only. The sidebar will stay open (but at least I'm able to close it again).
There is another dysfunction here, we don't need the Try button, because changing the ISO value will toggle the filter anyway.
I will remove it...

About the main issue: Can't we just save the sidebar state before entering a filter?

Andi
Comment 4 caulier.gilles 2009-04-17 10:11:12 UTC
>About the main issue: Can't we just save the sidebar state before entering a
>filter?

It supposed to be done normally (:=))))

Gilles
Comment 5 Marcel Wiesweg 2009-04-17 19:32:21 UTC
There is a problem in line 261f. of sidebar.cpp. We store the size of 0 but setting this fails. Need to try some solutions tomorrow. This code is prone to create side effects and break when changed ;-)
Comment 6 Andi Clemens 2009-04-17 20:29:40 UTC
I had changed code for thumbnail bar in imagepreviewview that also had problems when storing a size of zero. This isn't valid I guess. So I just saved the whole thumbbar state, which seems to recognize a hidden / collapsed state and therefore can restore the thumbbar in a correct way.

So maybe instead of saving a size of zero (I have not looked at the code now), we should simply save the sidebar state... at least it worked fine for my thumbbar problem.

Andi
Comment 7 Marcel Wiesweg 2009-04-18 14:49:30 UTC
SVN commit 955672 by mwiesweg:

Do not set previous tab from here. The sidebar will save state on its own.

BUG: 187733

 M  +2 -1      NEWS  
 M  +0 -5      utilities/imageeditor/editor/editortooliface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=955672