Do not set previous tab from here. The sidebar will save state on its own.

BUG: 187733

svn path=/trunk/extragear/graphics/digikam/; revision=955672